# Object-oriented-programming-in-cpp

./: .gitignore  README.md  tema1.cpp
Passwork Policies/: PasswordPolicies.cpp  date.in
tema 2/: CMakeLists.txt  abonat.cpp  abonat.h  abonat_skype.cpp  abonat_skype.h  abonat_skype_extern.cpp  abonat_skype_extern.h  abonat_skype_romania.cpp  abonat_skype_romania.h  agenda.cpp  agenda.h  main.cpp  persoana.cpp  persoana.h
tema 3/: CMakeLists.txt  actor.cpp  actor.h  actor_principal.cpp  actor_principal.h  contracte.cpp  contracte.h  film.cpp  film.h  firma_distributie.cpp  firma_distributie.h  firma_distributie_spec.cpp  firma_distributie_spec.h  main.cpp  persoana.cpp  persoana.h  regizor.cpp  regizor.h  tehnic.cpp  tehnic.h
