cmake_minimum_required(VERSION 3.15)
project(tema_2)

set(CMAKE_CXX_STANDARD 11)

add_executable(tema_2 main.cpp persoana.cpp persoana.h abonat.cpp abonat.h abonat_skype.cpp abonat_skype.h abonat_skype_romania.cpp abonat_skype_romania.h abonat_skype_extern.cpp abonat_skype_extern.h agenda.cpp agenda.h)