cmake_minimum_required(VERSION 3.15)
project(tema_3)

set(CMAKE_CXX_STANDARD 14)

add_executable(tema_3 main.cpp film.cpp film.h persoana.cpp persoana.h regizor.cpp regizor.h actor.cpp actor.h actor_principal.cpp actor_principal.h tehnic.cpp tehnic.h contracte.cpp contracte.h firma_distributie.cpp firma_distributie.h)